--- a/MyUniversity.Web/Views/Students/Details.cshtml
+++ b/MyUniversity.Web/Views/Students/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContosoUniversity.Models.Student
+﻿@model MyUniversity.Contracts.Models.StudentModel
 
 @{
     ViewBag.Title = "Details";
@@ -11,6 +11,13 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.IdentityNumber)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IdentityNumber)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
 
@@ -19,11 +26,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FirstMidName)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FirstMidName)
+            @Html.DisplayFor(model => model.FirstName)
         </dd>
 
         <dt>
@@ -49,7 +56,7 @@
                             @Html.DisplayFor(modelItem => item.Course.Title)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Grade)
+                            @Html.DisplayFor(modelItem => item.Mark)
                         </td>
                     </tr>
                 }
@@ -58,6 +65,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id}) |
     @Html.ActionLink("Back to List", "Index")
 </p>
