--- a/MyUniversity.Web/Views/Students/Details.cshtml
+++ b/MyUniversity.Web/Views/Students/Details.cshtml
@@ -11,26 +11,26 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.IdentityNumber)
+            @Html.DisplayNameFor(model => model.Person.IdentityNumber)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IdentityNumber)
+            @Html.DisplayFor(model => model.Person.IdentityNumber)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.Person.LastName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LastName)
+            @Html.DisplayFor(model => model.Person.LastName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.Person.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FirstName)
+            @Html.DisplayFor(model => model.Person.FirstName)
         </dd>
 
         <dt>
