--- a/MyUniversity.Web/Views/Students/Index.cshtml
+++ b/MyUniversity.Web/Views/Students/Index.cshtml
@@ -40,13 +40,13 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.IdentityNumber)
+                    @Html.DisplayFor(modelItem => item.Person.IdentityNumber)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
+                    @Html.DisplayFor(modelItem => item.Person.FirstName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
+                    @Html.DisplayFor(modelItem => item.Person.LastName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.EnrollmentDate)
