--- a/MyUniversity.Web/Views/Departments/Details.cshtml
+++ b/MyUniversity.Web/Views/Departments/Details.cshtml
@@ -39,7 +39,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Dean.FullName)
+            @Html.DisplayFor(model => model.Dean.Person.FullName)
         </dd>
     </dl>
 </div>
