--- a/MyUniversity.Web/Views/Departments/Index.cshtml
+++ b/MyUniversity.Web/Views/Departments/Index.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Dean.FullName)
+                @Html.DisplayFor(modelItem => item.Dean.Person.FullName)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
