--- a/MyUniversity.Web/Views/Departments/Restore.cshtml
+++ b/MyUniversity.Web/Views/Departments/Restore.cshtml
@@ -42,7 +42,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Dean.FullName)
+            @Html.DisplayFor(model => model.Dean.Person.FullName)
         </dd>
 
     </dl>
