--- a/MyUniversity.Web/Views/Courses/Create.cshtml
+++ b/MyUniversity.Web/Views/Courses/Create.cshtml
@@ -35,7 +35,7 @@
         <div class="form-group">
             <label class="control-label col-md-2" for="DepartmentId">Department</label>
             <div class="col-md-10">
-                @Html.DropDownList("DepartmentId", ViewBag.DepartmentId as IEnumerable<SelectListItem>, "Select department", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("DepartmentId", null, "Select department", htmlAttributes: new { @class = "form-control col-md-2" })
                 @Html.ValidationMessageFor(model => model.Department.Id, "", new { @class = "text-danger" })
             </div>
         </div>
