--- a/MyUniversity.Web/Views/Students/Edit.cshtml
+++ b/MyUniversity.Web/Views/Students/Edit.cshtml
@@ -51,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Person.Address, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Person.Address, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Person.Address, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Person.Address, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -82,7 +82,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Department, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DepartmentId", ViewBag.DepartmentId as IEnumerable<SelectListItem>, "Select department", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("DepartmentId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Department, "", new { @class = "text-danger" })
             </div>
         </div>
