--- a/MyUniversity.Web/Views/Departments/Details.cshtml
+++ b/MyUniversity.Web/Views/Departments/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MyUniversity.Contracts.Models.DepartmentModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Course Details";
 }
 
 <h2>Details</h2>
