--- a/MyUniversity.Web/Views/Departments/Edit.cshtml
+++ b/MyUniversity.Web/Views/Departments/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MyUniversity.Contracts.Models.DepartmentModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Department";
 }
 
 <h2>Edit</h2>
