--- a/MyUniversity.Web/Views/Departments/Restore.cshtml
+++ b/MyUniversity.Web/Views/Departments/Restore.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MyUniversity.Contracts.Models.DepartmentModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Reactivatte Department";
 }
 
 <h2>Delete</h2>
