--- a/MyUniversity.Web/Views/Students/Create.cshtml
+++ b/MyUniversity.Web/Views/Students/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyUniversity.Contracts.Models.StudentModel
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Student";
 }
 
 <h2>Create</h2>
