--- a/MyUniversity.Web/Views/Students/Edit.cshtml
+++ b/MyUniversity.Web/Views/Students/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MyUniversity.Contracts.Models.StudentModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Student";
 }
 
 <h2>Edit</h2>
