--- a/MyUniversity.Web/Views/Enrollments/GetByStudent.cshtml
+++ b/MyUniversity.Web/Views/Enrollments/GetByStudent.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MyUniversity.Contracts.Models.EnrollmentModel>
 
 @{
-    ViewBag.Title = string.Format("Enrollments of Student {0}", ViewBag.StudentFullName as string);
+    ViewBag.Title = "Enrollments Details";
 }
 
 <h2>Student's Enrollment Details @ViewBag.StudentFullName</h2>
