--- a/MyUniversity.Web/Views/Enrollments/Create.cshtml
+++ b/MyUniversity.Web/Views/Enrollments/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Create</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,41 +14,35 @@
         <h4>Enrollment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
         <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Student's Full Name: " + Model.Student.Person.FullName)
+        </div>
+        <div class="form-group">
+            @Html.Label("Course Title", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                @Html.DropDownList("Course.Title", ViewBag.Courses as SelectList, "Select course", htmlAttributes: new { @class = "form-control col-md-2" })
+                @Html.ValidationMessageFor(model => model.Course.Title, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.Credits, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Teacher", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Credits, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Credits, "", new { @class = "text-danger" })
+                @Html.DropDownList("Teacher.Id", ViewBag.Teachers as SelectList, "Select teacher", htmlAttributes: new { @class = "form-control col-md-2" })
+                @Html.ValidationMessageFor(model => model.Course.Title, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            <label class="control-label col-md-2" for="DepartmentId">Department</label>
+            @Html.Label("Grade", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DepartmentId", null, "Select department", htmlAttributes: new { @class = "form-control col-md-2" })
-                @Html.ValidationMessageFor(model => model.Department.Id, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                @Html.EditorFor(model => model.Mark, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Mark, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "GetByStudent", new { studentId = Model.StudentId })
 </div>
 
 @section Scripts {
