--- a/MyUniversity.Web/Views/Enrollments/Edit.cshtml
+++ b/MyUniversity.Web/Views/Enrollments/Edit.cshtml
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.RowVersion)
         <div class="form-group">
-            @Html.Label("Student's Full Name: " + Model.Student.Person.FullName)
+            @Html.Label("Student: " + Model.Student.Person.FullName)
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Course.Title, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -49,5 +49,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "GetByStudent", new { studentId = Model.Student.Id })
+    @Html.ActionLink("Back to List", "Index", new { studentId = Model.Student.Id })
 </div>
