--- a/MyUniversity.Web/Views/Departments/Index.cshtml
+++ b/MyUniversity.Web/Views/Departments/Index.cshtml
@@ -40,7 +40,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
                 @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new {id = item.Id}) 
+                @Html.ActionLink("Deactive", "Delete", new {id = item.Id}) 
                 @if (item.Deactive.GetValueOrDefault())
                 {
                     @:| @Html.ActionLink("Reactivate", "Restore", new { id = item.Id })
