--- a/MyUniversity.Web/Views/Home/Index.cshtml
+++ b/MyUniversity.Web/Views/Home/Index.cshtml
@@ -1,31 +1,62 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "My University";
 }
-
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p class="lead">My University</p>
 </div>
-
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-3">
+        <h2>Students</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            <ul>
+                <li>Index, Create, Edit</li>
+                <li>Link to Enrollments</li>
+                <li>Check Concurrency on Edit</li>
+                <li>Simple data table with filtering and ordering</li>
+            </ul>
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>
+            <h4>Enrollments</h4>
+        <p>
+            <ul>
+                <li>Create, Edit</li>
+                <li>Check Concurrency on Edit</li>
+                <li>Bind Attribute</li>
+            </ul>
+        </p>
+        </p>
+        @Html.ActionLink("Go there", "Index", "Students")
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+
+    <div class="col-md-3">
+        <h2>Teacher</h2>
+        <p>
+            <ul>
+                <li>Index, Create, Edit</li>
+                <li>Check Concurrency on Edit</li>
+                <li>Simple data table with filtering and ordering</li>
+            </ul>
+        </p>
+        @Html.ActionLink("Go there", "Index", "Teachers")
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-3">
+        <h2>Departments</h2>
+        <p>
+            <ul>
+                <li>Index, Create, Edit, Deactivate, Reactivate</li>
+                <li>Check Concurrency on Edit, Deactivate, Reactivate</li>
+            </ul>
+        </p>
+        @Html.ActionLink("Go there", "Index", "Departments")
+    </div>
+    <div class="col-md-3">
+        <h2>Courses</h2>
+        <p>
+            <ul>
+                <li>Index, Create, Edit</li>
+            </ul>
+        </p>
+        @Html.ActionLink("Go there", "Index", "Courses")
     </div>
 </div>
