--- a/MyUniversity.Web/Views/Courses/Edit.cshtml
+++ b/MyUniversity.Web/Views/Courses/Edit.cshtml
@@ -12,6 +12,7 @@
 
     <div class="form-horizontal">
         <h4>Course</h4>
+        <p class="error">@ViewBag.ConcurrencyErrorMessage</p>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
