--- a/MyUniversity.Web/Views/Home/Index.cshtml
+++ b/MyUniversity.Web/Views/Home/Index.cshtml
@@ -55,6 +55,7 @@
         <p>
             <ul>
                 <li>Index, Create, Edit</li>
+                <li>Details with CORS</li>
                 <li>Check Concurrency on Edit</li>
             </ul>
         </p>
