--- a/MyUniversity.Web/Views/Teachers/Index.cshtml
+++ b/MyUniversity.Web/Views/Teachers/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model PagedList.IPagedList<MyUniversity.Contracts.Models.TeacherModel>
-    @using PagedList.Mvc;
-    <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<MyUniversity.Contracts.Models.TeacherModel>
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
     @{
         ViewBag.Title = "Teachers";
