--- a/MyUniversity.Web/Views/Home/Index.cshtml
+++ b/MyUniversity.Web/Views/Home/Index.cshtml
@@ -2,8 +2,15 @@
     ViewBag.Title = "My University";
 }
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">My University</p>
+    <h1>ASP.NET My University</h1>
+    <p class="lead">
+        <ul>
+            <li>Using web API 2</li>
+            <li>ORM: EF and NHibernate (basic)</li>
+            <li>Not secured</li>
+        </ul>
+    </p>
+
 </div>
 <div class="row">
     <div class="col-md-3">
